CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file..

Version 1.8.3
---------------------------------------------------------------------
8 August 2008
+ Updated pick date functionality of js_calendar. Wasn't forwarding
properly.
+ Updated js calendar script ot most recent version.
+ DBPager - added method to disable auto creation of sort icons.
+ Database - getObjects calls __construct instead of the class named
  function to conform with php 5.
+ Removed auto_load from Init.php. Pear created some goofy errors with
  it.
+ Text - parseInput has a third parameter that allows you to avoid
  relative url changes.
+ sub and sup added to allowed tags
+ Release version changed to 2.0.0

+ Updated files:
javascript/js_calendar/dhtmlgoodies_calendar/dhtmlgoodies_calendar.js
javascript/js_calendar/phpws_addon.js
conf/text_settings.php
conf/version.php

1 August 2008
+ Added iframe, embed, and object to allowed tags in text_settings.php
+ Deleted Crutch_Form.php. Not used.
+ Started using php 5 for method and member definition
+ DBPager - changed various links to use Text methods instead of raw
  sprintf calls
+ PHPWS_Error - removed crutch function.
+ PHPWS_Form - removed underscore from some public member names
+ Init - added autoload function.
+ Link.php - new class. Allows link creation. Used by Text for its
  link functions.
+ Text.php
  o moduleLink, secureLink, and linkAddress all use new Link
    class.
  o new/rewritten functions: rewriteLink. secureRewriteLink,
    rewriteAddress
  o rewrite parameter added to linkAddress
  o getGetValues rewritten to work with new mod_rewrite scheme
+ Forward.php - new mod_rewrite format, matches pairs of slash
  separated values
+ Core.php - removed plugForward
+ Updated Mod_Rewrite.txt documentation
+ Updated conf/text_settings.php

28 July 2008
+ DBPager
  o Applied patch #2029054 from Eloi George. Puts DBPager's sort headers
    in the correct direction.