@@ -21,3 +21,4 @@ icon_surprised.gif=+:Surprised=+::o
 icon_surprised.gif=+:Surprised=+::eek:
 icon_wink.gif=+:Wink=+:;)
 banana.gif=+:Banana=+::banana:
+rofl.gif=+:ROFL=+::rofl:
